overflow styling fix

--- a/src/components/competitorsList/styles.css
+++ b/src/components/competitorsList/styles.css
@@ -1,5 +1,5 @@
 .competitors-list {
-  min-width: 330px  ;
+  min-width: 330px;
   width: 50%;
 }
 
@@ -23,4 +23,8 @@
     line-height: 24px;
     display: flex;
     justify-content: space-between;
+}
+
+.current-rank {
+  max-width: 90px;
 }
