--- a/src/components/goal/styles.css
+++ b/src/components/goal/styles.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
+    justify-content: center;
     font-size: 10px;
     line-height: 14px;
     color: #808080;
